--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 # dependencies
 /node_modules
 /.pnp
-/.env
 .pnp.js
 
 # testing
@@ -13,6 +12,7 @@
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
